Options working now (with some initialization errors, it looks like). Modularized vars to vars.js. Cleaner UI in options.

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     {
       "matches": ["https://mail.google.com/*"],
       "run_at": "document_end",
-      "js": ["content.js", "svgs.js", "options.js"],
+      "js": ["vars.js", "content.js", "svgs.js", "options.js"],
       "css": ["options.css"]
     }
   ],
